@@ -1,3 +1,7 @@
+2025-12-14  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-smb.el (tramp-smb-handle-make-process): Handle error buffer.
+
 2025-12-13  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-smb.el (tramp-smb-handle-make-process)
